# testffmpeg

./: .gitignore  README.md
engine/: CMakeLists.txt  Makefile  avideowriter.cpp  avideowriter.h  combinevideo.cpp  common.h  encodeaudio.cpp  encodevideo.cpp  filterencvideo.cpp  getprogress.cpp  media.cpp  muxaac.cpp  muxvideo.cpp  openaudio.cpp  readvideo.cpp  toimage.cpp  transcode.cpp  transcodeaacsfifo.cpp  transcodeencoder.cpp  transcodefunc.cpp
engine/avbase/: avbase.cpp  avbase.h
engine/filter/: filtervideo.cpp
engine/hw/: CMakeLists.txt  demohwtrancode  hwavfiltertrans.cpp  hwtranscode  hwtranscode.cpp  hwtransocde.cpp  transcode.cpp
engine/transcode/: transcodeaac.cpp  transcodeaacfifo.cpp  transcodecopycodec.cpp  transcodeencoderall1.cpp  transcodeencoderallpts.cpp
ffmpegversion/: ffmpegresource  formatandcodec  reportversion  v3.2  v3.3  v3.4  v4.0  v4.1
netexample/: NIOVideoSplicer.cpp  NIOVideoSplicer.h
netexample/mp4_to_mov/: mp4_to_mov.cpp  mp4_to_mov.vcxproj
netexample/pcm_to_aac/src/mp4_to_mov/: mp4_to_mov.sln
netexample/pcm_to_aac/src/pcm_to_aac/: pcm_to_aac.cpp  pcm_to_aac.sln  pcm_to_aac.vcxproj
netexample/pcm_to_aac/src/testffmpeg/: main.cpp  testffmpeg.sln  testffmpeg.vcxproj
netexample/rgb_pcm_to_mp4/: XVideoWriter.cpp  XVideoWriter.h  rgb_pcm_to_mp4.cpp  rgb_pcm_to_mp4.sln  rgb_pcm_to_mp4.vcxproj
netexample/rgb_to_mp4/: rgb_to_mp4.cpp  rgb_to_mp4.sln  rgb_to_mp4.vcxproj
